--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo ok"
+    "test": "echo ok",
+    "postinstall": "link-local"
   },
   "exports": {
     ".": {
@@ -38,7 +39,9 @@
   },
   "devDependencies": {
     "ambient-dts": "github:stagas/ambient-dts",
-    "vite": "^5.0.12"
+    "file-matcher": "^1.3.0",
+    "vite": "^5.0.12",
+    "vitest": "^1.2.2"
   },
   "dependencies": {
     "jsx": "github:stagas/jsx",
